feat(warp)!: support independent gool pairs

--- a/internal/web/static/index.html
+++ b/internal/web/static/index.html
@@ -271,30 +271,15 @@ input::placeholder{color:var(--text3)}
 
 <div class="modal-overlay" id="goolModal">
   <div class="modal">
-    <h3>New Gool Group (WARP-in-WARP)</h3>
-    <p style="font-size:12px;color:var(--text2);margin-bottom:16px">Creates one shared outer tunnel + N inner accounts. All inners route through the same outer for distinct exit IPs.</p>
+    <h3>New Gool Pairs (WARP-in-WARP)</h3>
+    <p style="font-size:12px;color:var(--text2);margin-bottom:16px">Creates N independent pairs, each with its own outer tunnel. Each pair gets a distinct exit IP because each outer has a unique WARP address.</p>
     <div class="form-row"><label>Name</label><input id="goolName" placeholder="e.g. jp"></div>
-    <div class="form-row"><label>Inner Count</label><input id="goolCount" type="number" value="3" min="1" max="10"></div>
+    <div class="form-row"><label>Pairs</label><input id="goolCount" type="number" value="3" min="1" max="10"></div>
     <div class="form-row"><label>Endpoint</label><input id="goolEndpoint" placeholder="engage.cloudflareclient.com"></div>
     <div class="form-row"><label>Port</label><input id="goolPort" type="number" value="2408"></div>
     <div class="btn-row">
       <button onclick="closeModals()">Cancel</button>
       <button class="primary" onclick="createGoolPair()">Create</button>
-    </div>
-  </div>
-</div>
-
-<div class="modal-overlay" id="addInnersModal">
-  <div class="modal">
-    <h3>Add Inner Accounts</h3>
-    <p style="font-size:12px;color:var(--text2);margin-bottom:4px">Outer: <strong id="addInnersOuterName" style="color:var(--text)"></strong></p>
-    <input type="hidden" id="addInnersOuterID">
-    <div class="form-row" style="margin-top:12px"><label>Count</label><input id="addInnersCount" type="number" value="3" min="1" max="10"></div>
-    <div class="form-row"><label>Endpoint</label><input id="addInnersEndpoint" placeholder="engage.cloudflareclient.com"></div>
-    <div class="form-row"><label>Port</label><input id="addInnersPort" type="number" value="2408"></div>
-    <div class="btn-row">
-      <button onclick="closeModals()">Cancel</button>
-      <button class="primary" onclick="addGoolInners()">Add</button>
     </div>
   </div>
 </div>
@@ -502,17 +487,20 @@ async function refresh() {
       const isInner = !!a.gool_outer_id;
       if (isOuter) {
         const innerCount = innerCountByOuter[a.id] || 0;
-        const plural = innerCount !== 1 ? 's' : '';
+        // Find the linked inner name(s) for display
+        const linkedInners = accounts.filter(x => x.gool_outer_id === a.id).map(x => x.name);
+        const linkedLabel = linkedInners.length === 1
+          ? `<span style="font-size:10px;color:var(--text2)">↳ ${esc(linkedInners[0])}</span>`
+          : `<span style="font-size:10px;color:var(--text2)">${innerCount} inner${innerCount !== 1 ? 's' : ''}</span>`;
         return `<tr class="row-outer">
-          <td>${esc(a.name)} <span class="badge-outer">OUTER</span> <span style="color:var(--text2);font-size:11px">${innerCount} inner${plural}</span></td>
+          <td>${esc(a.name)} <span class="badge-outer">OUTER</span> ${linkedLabel}</td>
           <td>${esc(a.endpoint)}:${a.endpoint_port}</td>
           <td>${esc(a.ipv4)}</td>
           <td id="ip-${a.id}" style="font-family:'SF Mono',Consolas,monospace;font-size:12px">${ipCache[a.id] ? esc(ipCache[a.id]) : '<span style="color:var(--text3)">-</span>'}</td>
           <td class="disabled">Outer</td>
           <td class="actions">
             <button onclick="checkIP('${a.id}',this)">IP</button>
-            <button onclick="showAddInnersModal('${a.id}','${esc(a.name)}')">+ Inners</button>
-            <button class="danger" onclick="deleteAccount('${a.id}','${esc(a.name)}',false,true,${innerCount})">Delete Group</button>
+            <button class="danger" onclick="deleteAccount('${a.id}','${esc(a.name)}',false,true,${innerCount})">Delete</button>
           </td>
         </tr>`;
       }
@@ -565,29 +553,6 @@ function showAddModal() { document.getElementById('addModal').classList.add('sho
 function showBatchModal() { document.getElementById('batchModal').classList.add('show'); }
 function showGoolModal() { document.getElementById('goolModal').classList.add('show'); }
 
-function showAddInnersModal(outerId, outerName) {
-  document.getElementById('addInnersOuterID').value = outerId;
-  document.getElementById('addInnersOuterName').textContent = outerName;
-  document.getElementById('addInnersModal').classList.add('show');
-}
-
-async function addGoolInners() {
-  const outerId = document.getElementById('addInnersOuterID').value;
-  const count = parseInt(document.getElementById('addInnersCount').value) || 1;
-  const endpoint = document.getElementById('addInnersEndpoint').value;
-  const port = parseInt(document.getElementById('addInnersPort').value) || 2408;
-  if (!outerId) { toast('No outer account selected', 'error'); return; }
-  try {
-    const body = { count, endpoint, endpoint_port: port };
-    toast(`Registering ${count} inner account${count !== 1 ? 's' : ''}...`);
-    closeModals();
-    await api(`/api/accounts/gool/${outerId}/inner`, { method: 'POST', body: JSON.stringify(body) });
-    toast(`Added ${count} inner account${count !== 1 ? 's' : ''} — restart engine to apply`);
-    setPendingRestart(true);
-    setTimeout(refresh, 1500);
-  } catch (e) { if (e.message !== 'unauthorized') toast(e.message, 'error'); }
-}
-
 async function createGoolPair() {
   const name = document.getElementById('goolName').value.trim();
   if (!name) { toast('Name is required', 'error'); return; }
@@ -599,10 +564,10 @@ async function createGoolPair() {
       endpoint: document.getElementById('goolEndpoint').value,
       endpoint_port: parseInt(document.getElementById('goolPort').value) || 2408,
     };
-    toast(`Registering gool group (1 outer + ${count} inner${count !== 1 ? 's' : ''})...`);
+    toast(`Registering ${count} gool pair${count !== 1 ? 's' : ''}...`);
     closeModals();
     await api('/api/accounts/gool', { method: 'POST', body: JSON.stringify(body) });
-    toast(`Gool group created — restart engine to apply`);
+    toast(`${count} gool pair${count !== 1 ? 's' : ''} created — restart engine to apply`);
     setPendingRestart(true);
     setTimeout(refresh, 1500);
   } catch (e) { if (e.message !== 'unauthorized') toast(e.message, 'error'); }
